# mCRL2-rust

./: .gitignore  .gitmodules  Cargo.toml  README.md
.cargo/: config.toml
crates/io/: Cargo.toml
crates/io/src/: io_aut.rs
crates/lts/: Cargo.toml
crates/lts/src/: labelled_transition_system.rs  lts.rs  random_lts.rs
crates/mcrl2/: Cargo.toml
crates/mcrl2/src/: lps.rs
crates/mcrl2/src/aterm/: aterm_container.rs  aterm_pool.rs  global_aterm_pool.rs  term.rs
crates/mcrl2/src/data/: data_specification.rs  data_terms.rs  jitty.rs
crates/mcrl2/tests/input/: aterm_lifetime.stderr
crates/rec-tests/: Cargo.toml
crates/rec-tests/src/: syntax.rs
crates/rec-tests/tests/: rec_tests.rs
crates/reduction/: Cargo.toml
crates/reduction/src/: block_partition.rs  incoming_transitions.rs  lib.rs  quotient.rs  scc_decomposition.rs  signature_refinement.rs  signatures.rs  sort_topological.rs
crates/reduction/tests/: test_reduction.rs
crates/sabre/: Cargo.toml
crates/sabre/benchmarks/: Cargo.toml
crates/sabre/benchmarks/benches/: benchmark_sabre.rs
crates/sabre/src/utilities/: semi_compressed_tree.rs
crates/sabre/tests/: parallelism.rs  rewrite_tests.rs
libraries/benchmarks/: Cargo.toml
libraries/benchmarks/benches/: benchmarks.rs  operations.rs  rewrite.rs  rewriter.rs
libraries/benchmarks/cases/: add16.dataspec
libraries/benchmarks/src/: lib.rs  test.rs
libraries/benchmarks/tests/: test.rs
libraries/io/: Cargo.toml
libraries/io/src/: aut.rs  io_aut.rs  labelled_transition_system.rs  lib.rs  line_iterator.rs  progress.rs  u64_variablelength.rs  variablewidth.rs
libraries/io/tests/: test_reduction.rs
libraries/mcrl2/: Cargo.toml
libraries/mcrl2-syntax/: Cargo.toml  mcrl2_grammar.pest
libraries/mcrl2-syntax/examples/: parse.rs
libraries/mcrl2-syntax/src/: ast.rs  display.rs  grammar.rs  lib.rs  precedence.rs  syntax.rs
libraries/mcrl2-syntax/tests/: parse_tests.rs
libraries/mcrl2/examples/: derive_term.rs  lifetimes.rs
libraries/mcrl2/src/: aterm.rs  aterm_builder.rs  aterm_pool.rs  atermpp.rs  atermpp_util.rs  busy_forbidden.rs  data.rs  lib.rs  lps.rs  symbol.rs  term_builder.rs
libraries/mcrl2/src/aterm/: aterm.rs  aterm_builder.rs  aterm_container.rs  aterm_pool.rs  busy_forbidden.rs  global_aterm_pool.rs  mod.rs  symbol.rs  term.rs
libraries/mcrl2/src/data/: data.rs  data_specification.rs  data_terms.rs  jitty.rs  mod.rs  sort_terms.rs
libraries/mcrl2/tests/: build_tests.rs
libraries/mcrl2/tests/input/: aterm_lifetime.rs  aterm_lifetime.stderr
libraries/rec-tests/: Cargo.toml  grammar.pest
libraries/rec-tests/src/: lib.rs  missionaries.rec  parse_rec.rs  syntax.rs
libraries/rec-tests/tests/: rec_tests.rs
libraries/rec-tests/tests/validated_results/: result_bubblesort20.txt  result_bubblesort720.txt  result_dart.txt  result_fibonacci05.txt  result_garbagecollection.txt  result_mergesort10.txt  result_natlist.txt  result_permutations6.txt  result_sieve100.txt  result_tak18.txt
libraries/rec_tests/: Cargo.toml  grammar.pest
libraries/rec_tests/src/: lib.rs  parse_rec.rs  syntax.rs
libraries/rec_tests/tests/: rec_tests.rs
libraries/rec_tests/tests/validated_results/: result_binarysearch.txt  result_bubblesort100.txt  result_closure.txt  result_factorial8.txt  result_fibonacci19.txt  result_merge.txt  result_missionaries2.txt  result_order.txt  result_revnat100.txt  result_sieve1000.txt  result_sieve20.txt  result_tak36.txt
libraries/sabre/: Cargo.toml
libraries/sabre-compiling/: Cargo.toml  build.rs  output.rs
libraries/sabre-compiling/examples/: compiling.rs  rewrite.rs
libraries/sabre-compiling/sabre-compiled/: Cargo.toml
libraries/sabre-compiling/sabre-compiled/src/: generated.rs  lib.rs
libraries/sabre-compiling/sabre-ffi/: Cargo.toml
libraries/sabre-compiling/sabre-ffi/src/: atermpp.rs  lib.rs
libraries/sabre-compiling/src/: compilation.rs  innermost_codegen.rs  interface.rs  lib.rs  library.rs  sabre_compiling.rs
libraries/sabre/benchmarks/: Cargo.toml
libraries/sabre/benchmarks/benches/: benchmark_sabre.rs
libraries/sabre/src/: innermost_rewriter.rs  lib.rs  rewrite_specification.rs  sabre_rewriter.rs  test_utility.rs
libraries/sabre/src/matching/: conditions.rs  mod.rs  nonlinear.rs
libraries/sabre/src/set_automaton/: announcement.rs  automaton.rs  construction.rs  display.rs  match_goal.rs  mod.rs  utility.rs
libraries/sabre/src/utilities/: configuration_stack.rs  innermost_stack.rs  match_term.rs  mod.rs  position.rs  rewriting_utilities.rs  semi_compressed_tree.rs  stack_rewriter.rs  subsitution.rs  substitution.rs  term_stack.rs
libraries/sabre/tests/: parallelism.rs  parse_rec.rs  rec_tests.rs  rewrite_tests.rs
libraries/sabre/tests/validated_results/: result_calls.txt  result_empty.txt  result_evalexpr.txt  result_factorial5.txt  result_factorial6.txt  result_factorial7.txt  result_factorial9.txt  result_fib32.txt  result_fibonacci18.txt  result_fibonacci20.txt  result_hanoi12.txt  result_hanoi16.txt  result_hanoi4.txt  result_hanoi8.txt  result_logic3.txt  result_missionaries3.txt  result_oddeven.txt  result_permutations7.txt  result_revelt.txt  result_revnat1000.txt  result_tautologyhard.txt  result_tricky.txt
libraries/xtask/: Cargo.toml
libraries/xtask/src/: benchmark.rs  coverage.rs  main.rs  sanitizer.rs
tools/lpsreach/: Cargo.toml
tools/lpsreach/src/: lib.rs  main.rs  sylvan_io.rs
tools/lpsreach/tests/: exploration.rs
tools/ltsconvert/: Cargo.toml
tools/ltsconvert/src/: main.rs
tools/ltsgraph/: Cargo.toml  build.rs
tools/ltsgraph/benchmarks/: Cargo.toml
tools/ltsgraph/src/: console.rs  error_dialog.rs  graph_layout.rs  lib.rs  main.rs  pauseable_thread.rs  render.rs  render_skia.rs  render_text.rs  simulation.rs  text_cache.rs  viewer.rs
tools/ltsgraph/ui/: application.slint  dialog.slint
tools/ltsinfo/: Cargo.toml
tools/ltsinfo/src/: main.rs
tools/mcrl2rewrite/: Cargo.toml
tools/mcrl2rewrite/src/: counting_allocator.rs  lib.rs  main.rs  trs_format.rs
tools/rewrite/: Cargo.toml
tools/rewrite/src/: main.rs  trs_format.rs
(+130 files in other folders)
