[profile.release]
lto = "thin"

[profile.bench]
debug = "line-tables-only"

[workspace]
resolver = "2"
members = [
    "libraries/*",
    "libraries/**/benchmarks",
    "tools/*",
    "tools/**/benchmarks",
    "tools/**/library"
]

[workspace.package]
authors = ["Maurice Laveaux"]
edition = "2021"
license = "BSL-1.0"
repository = "https://github.com/mlaveaux/mCRL2-rust.git"
rust-version = "1.79.0"
version = "0.1.0"

[workspace.dependencies]
ahash = "0.8"
anyhow = { version = "1.0", features = ["backtrace"] }
bitstream-io = "2.5"
bumpalo = "3.6"
cargo-emit = "0.2"
cc = "1.1"
clap = { version = "4.5", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }
crossbeam-utils = "0.8"
cxx = "1.0"
cxx-build = { version = "1.0", features = ["parallel"] }
env_logger = "0.11"
fxhash = "0.2"
html-escape = "0.2"
indoc = "2.0"
itertools = "0.13"
log = "0.4"
once_cell = "1.19"
pest = "2.7"
pest_derive = "2.7"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.8"
regex = "1.10"
rustc-hash = "2.0"
smallvec = "1.13"
streaming-iterator = "0.1"
syn = { version = "2.0", features = ["full", "extra-traits"] }
test-case = "3.3"
test-log = "0.2"
thiserror = "1.0"
tikv-jemallocator = "0.6"
trybuild = "1.0"

# Used for GUI tools
cosmic-text = "0.12"
rfd = { version = "0.15", default-features = false, features = ["xdg-portal", "tokio"] }
slint = "1.8"
tiny-skia = "0.11"
tokio = { version = "1.40", features = ["rt", "macros"] }
winapi = "0.3"
glam = "0.29"

# Only used for xtask
duct = "0.13"
fs_extra = "1.3"
glob = "0.3"
human-sort = "0.2"
which = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }

# The workspace libraries.
io = { path = "libraries/io" }
lts = { path = "libraries/lts" }
mcrl2 = { path = "libraries/mcrl2" }
mcrl2-macros = { path = "libraries/mcrl2-macros" }
mcrl2-sys = { path = "libraries/mcrl2-sys" }
rec-tests = { path = "libraries/rec-tests" }
sabre = { path = "libraries/sabre" }
unsafety = { path = "libraries/unsafety" }
utilities = { path = "libraries/utilities" }