[package]
name = "mcrl2"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[features]
unstable = []

[dependencies]
mcrl2-macros.workspace = true
mcrl2-sys.workspace = true
mcrl2rust-utilities.workspace = true

ahash.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true

[dev-dependencies]
test-log.workspace = true
trybuild.workspace = true