[package]
name = "rec-tests"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest.workspace = true
pest_derive.workspace = true
ahash.workspace = true
mcrl2.workspace = true
sabre.workspace = true

[dev-dependencies]
test-case.workspace = true
env_logger.workspace = true