[package]
name = "mcrl2rust-reduction"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
mcrl2rust-io.workspace = true
mcrl2rust-lts.workspace = true
mcrl2rust-utilities.workspace = true

bumpalo.workspace = true
env_logger.workspace = true
log.workspace = true
rand.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
test-case.workspace = true
test-log.workspace = true