[package]
name = "sabre"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
rustc-hash.workspace = true
smallvec.workspace = true
html-escape.workspace = true
ahash.workspace = true
env_logger.workspace = true
log.workspace = true
itertools.workspace = true
mcrl2.workspace = true
rand.workspace = true

[dev-dependencies]
test-case.workspace = true
test-log.workspace = true