[package]
name = "mcrl2-benchmarks"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }
mcrl2 = { path="../mcrl2" }
rand.workspace = true
rec-tests = { path="../rec-tests" }
sabre = { path="../sabre" }
utilities = { path="../utilities" }

[[bench]]
name = "benchmarks"
harness = false