[package]
name = "mcrl2-benchmarks"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
divan = "0.1"
env_logger = "0.10"
mcrl2 = { path="../mcrl2" }
rec-tests = { path="../rec-tests" }
sabre = { path="../sabre" }
utilities = { path="../utilities" }
ahash.workspace = true
rand.workspace = true

[[bench]]
name = "rewrite"
harness = false