[package]
name = "mcrl2-benchmarks"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
env_logger = "0.11"
mcrl2 = { path="../mcrl2" }
rec-tests = { path="../rec-tests" }
sabre = { path="../sabre" }
utilities = { path="../utilities" }
ahash.workspace = true
rand.workspace = true

[[bench]]
name = "benchmarks"
harness = false