[package]
name = "io"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
bitstream-io.workspace = true
thiserror.workspace = true
streaming-iterator.workspace = true
fxhash.workspace = true
regex.workspace = true
log.workspace = true

[dev-dependencies]
test-log.workspace = true