[package]
name = "io"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
bitstream-io.workspace = true
log.workspace = true
lts.workspace = true
regex.workspace = true
rustc-hash.workspace = true
streaming-iterator.workspace = true
thiserror.workspace = true
utilities.workspace = true

[dev-dependencies]
test-log.workspace = true
test-case.workspace = true
env_logger.workspace = true