[package]
name = "mcrl2-syntax"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7"
pest_derive = "2.7"

[dev-dependencies]
indoc = "2.0"
test-case = "3.1"
env_logger.workspace = true