[package]
name = "mcrl2"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
parking_lot = "0.12"
once_cell = "1.19"
ahash.workspace = true
rand.workspace = true
log.workspace = true

mcrl2-macros.workspace = true
mcrl2-sys = { path="../mcrl2-sys" }
utilities = { path="../utilities" }

[dev-dependencies]
test-log.workspace = true