[package]
name = "mcrl2"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[features]
unstable = []

[dependencies]
parking_lot = "0.12"
once_cell = "1.19"

ahash.workspace = true
log.workspace = true
mcrl2-macros.workspace = true
mcrl2-sys.workspace = true
rand.workspace = true
utilities.workspace = true

[dev-dependencies]
test-log.workspace = true
trybuild.workspace = true