[package]
name = "rec-tests"
version = "0.1.0"
rust-version = "1.70"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8"
mcrl2 = { path="../mcrl2" }
sabre = { path="../sabre" }
pest = "2.7"
pest_derive = "2.7"

[dev-dependencies]
test-case = "3.1"