[package]
name = "rec-tests"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash.workspace = true
mcrl2 = { path="../mcrl2" }
sabre = { path="../sabre" }
pest = "2.7"
pest_derive = "2.7"

[dev-dependencies]
test-case = "3.1"