[package]
name = "rec-tests"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7"
pest_derive = "2.7"
ahash.workspace = true
mcrl2.workspace = true
sabre.workspace = true

[dev-dependencies]
test-case = "3.1"
env_logger.workspace = true