[package]
name = "REC-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
mcrl2-rust = { path="../mcrl2-rust" }
sabre = { path="../sabre" }
pest = "2.1.3"
pest_derive = "2.1.0"

[dev-dependencies]
test-case = "3.0.0"