[package]
name = "sabre-compiling"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
duct = "0.13"
indoc = "2.0"
libloading = "0.8"
temp-dir = "0.1"
toml = "0.8"
sabre-ffi = { path = "./sabre-ffi" }
env_logger.workspace = true
log.workspace = true
mcrl2.workspace = true
sabre.workspace = true

[dev-dependencies]
test-log.workspace = true

[build-dependencies]
toml = "0.8"