[package]
name = "sabre-compiling"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
duct.workspace = true
indoc.workspace = true
libloading.workspace = true
temp-dir.workspace = true
toml.workspace = true
env_logger.workspace = true
log.workspace = true
mcrl2.workspace = true
sabre.workspace = true

[dev-dependencies]
test-log.workspace = true

[build-dependencies]
toml.workspace = true