[package]
name = "sabre"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
itertools = "0.12"
rustc-hash = "1.1"
smallvec = "1.11"
mcrl2 = { path="../../libraries/mcrl2" }
ahash.workspace = true
log.workspace = true
rand.workspace = true
test-log.workspace = true