[package]
name = "sabre"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
itertools = "0.12"
rustc-hash = "1.1"
smallvec = "1.11"
html-escape = "0.2"
mcrl2.workspace = true
ahash.workspace = true
log.workspace = true
rand.workspace = true

[dev-dependencies]
test-case = "3.1"
test-log.workspace = true