[package]
name = "xtask"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duct = "0.13"
fs_extra = "1.0"
glob = "0.3"
human-sort = "0.2"
which = "5.0"
regex.workspace = true