[package]
name = "lpsreach"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
ldd = { git = "https://github.com/mlaveaux/ldd-library.git" }