[package]
name = "lpsreach"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ldd = { git = "https://github.com/mlaveaux/ldd-library.git" }
mcrl2 = { path = "../../libraries/mcrl2" }
sabre.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true