[package]
name = "ltsconvert"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
io = { path = "../../libraries/io" }
ahash.workspace = true
clap.workspace = true
env_logger.workspace = true