[package]
name = "ltsgraph"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
slint = "1.5"
rfd = { version = "0.14", default-features = false, features = ["xdg-portal", "tokio"] }
tiny-skia = "0.11"
tokio = { version = "1.36", features = ["rt", "macros"] }
ltsgraph-lib = { path = "./library" }
winapi = "0.3"
clap.workspace = true
env_logger.workspace = true
log.workspace = true
io.workspace = true
itertools.workspace = true

[build-dependencies]
slint-build = "1.5"