[package]
name = "ltsgraph"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ltsgraph-lib = { path = "./library" }
slint.workspace = true
rfd.workspace = true
tiny-skia.workspace = true
tokio.workspace = true
winapi.workspace = true
anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
io.workspace = true
itertools.workspace = true


[build-dependencies]
slint-build = "1.5"