[package]
name = "ltsgraph"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ltsgraph-lib = { path = "./library" }
anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
gui.workspace = true
io.workspace = true
log.workspace = true
rfd.workspace = true
slint.workspace = true
tiny-skia.workspace = true
tokio.workspace = true

[build-dependencies]
slint-build.workspace = true