[package]
name = "ltsinfo"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[features]
measure-allocs = []

[dependencies]
clap.workspace = true
env_logger.workspace = true
io.workspace = true
log.workspace = true
lts.workspace = true
reduction.workspace = true
unsafety.workspace = true
utilities.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator.workspace = true