[package]
name = "ltsinfo"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[features]
measure-allocs = []

[dependencies]
mcrl2rust-io.workspace = true
mcrl2rust-lts.workspace = true
mcrl2rust-reduction.workspace = true
mcrl2rust-unsafety.workspace = true
mcrl2rust-utilities.workspace = true

clap.workspace = true
env_logger.workspace = true
log.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator.workspace = true