[package]
name = "mcrl2rewrite"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[features]
measure-allocs = []

[dependencies]
ahash.workspace = true
anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
mcrl2.workspace = true
rec-tests.workspace = true
sabre.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator.workspace = true