[package]
name = "mcrl2rewrite"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[features]
measure-allocs = []

[dependencies]
mcrl2.workspace = true
mcrl2rust-sabre.workspace = true
mcrl2rust-unsafety.workspace = true
rec-tests.workspace = true

ahash.workspace = true
anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator.workspace = true