[package]
name = "rewrite"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[features]
measure-allocs = []

[dependencies]
anyhow = "1.0"
mcrl2 = { path = "../../libraries/mcrl2" }
rec-tests = { path = "../../libraries/rec-tests" }
sabre = { path = "../../libraries/sabre" }
ahash.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
itertools.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5"