[package]
name = "benchmarks-sabre"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mcrl2.workspace = true
mcrl2rust-sabre.workspace = true
mcrl2rust-utilities.workspace = true

criterion.workspace = true
env_logger.workspace = true
rec-tests.workspace = true
ahash.workspace = true

[[bench]]
name = "benchmark_sabre"
harness = false